<resources>

    <string name="app_name">Bramblecriste</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_reset">Reset Clock</string>
    <string name="pause"></string>
    <string name="timerzero">00:00:00</string>
    <string name="title_activity_timer">Bramblecriste</string>
    <string name="title_activity_preferences">Preferences</string>
    
    <string name="title_timer_preferences">Timer Preferences</string>
    <string name="title_initial_time">Initial Time</string>
    <string name="title_initial_time_player_1">Player 1 Start Time</string>
    <string name="title_initial_time_player_2">Player 2 Start Time</string>
    <string name="summary_initial_time">Starting value for player clock in minutes</string>
    <string name="title_behaviors">Behaviors</string>
    <string name="title_vibrate_on_press">Vibrate</string>
    <string name="summary_vibrate_on_press">Vibrate when button is pushed</string>
    
    <string name="title_appearance">Appearance</string>
    <string name="title_color_theme">Color Scheme</string>
    <string name="summary_color_theme">Choose colors for the clock</string>
    
    <string-array name="entries_initial_time">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
    </string-array>

    <string-array name="entryvalues_initial_time">
        <item>60000</item>
		<item>120000</item>
		<item>180000</item>
		<item>240000</item>
		<item>300000</item>
		<item>360000</item>
		<item>420000</item>
		<item>480000</item>
		<item>540000</item>
		<item>600000</item>
		<item>660000</item>
		<item>720000</item>
		<item>780000</item>
		<item>840000</item>
		<item>900000</item>
		<item>960000</item>
		<item>1020000</item>
		<item>1080000</item>
		<item>1140000</item>
		<item>1200000</item>
		<item>1260000</item>
		<item>1320000</item>
		<item>1380000</item>
		<item>1440000</item>
		<item>1500000</item>
		<item>1560000</item>
		<item>1620000</item>
		<item>1680000</item>
		<item>1740000</item>
		<item>1800000</item>
		<item>1860000</item>
		<item>1920000</item>
		<item>1980000</item>
		<item>2040000</item>
		<item>2100000</item>
    </string-array>
</resources>